# git-branch-weight

./: Cargo.toml  README.md
src/: git.rs  main.rs  objects.rs  report.rs
tests/: integration_test.rs
