[package]
name = "git-branch-weight"
version = "0.1.0"
edition = "2021"
description = "Estimate weight of unmerged Git branches"
authors = ["akaptelinin"]
license = "MIT"

[[bin]]
name = "git-branch-weight"
path = "src/main.rs"

[dependencies]
gix = { version = "0.70", default-features = false, features = ["blocking-network-client", "revision"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
