[package]
name = "git-branch-weight"
version = "0.1.0"
edition = "2021"
description = "Estimate weight of unmerged Git branches"
authors = ["akaptelinin"]
license = "MIT"

[[bin]]
name = "git-branch-weight"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustc-hash = "2.1"

[profile.release]
lto = true
codegen-units = 1
